db-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-server
  labels:
    app: test-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-server
  template:
    metadata:
      labels:
        app: test-server
    spec:
      containers:
      - name: test-server-1
        image: mpyszynski/k8s-gcp:latest
      nodeSelector:
        kubernetes.io/hostname: gke-cluster-1-default-pool-c18ec09f-kc3h
---
apiVersion: v1
kind: Service
metadata:
  name: test-server-service
spec:
  type: LoadBalancer
  selector:
    app: test-server
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
