mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-mongo
  labels:
    app: test-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-mongo
  template:
    metadata:
      labels:
        app: test-mongo
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
      nodeSelector:
        kubernetes.io/hostname: gke-cluster-1-default-pool-c18ec09f-kkvt
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: test-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
    resolution: NONE
