service-versions.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: server
    service: server
spec:
  selector:
    app: server
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-v1
  labels:
    app: server
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
      version: v1
  template:
    metadata:
      labels:
        app: server
        version: v1
    spec:
      containers:
      - name: server
        image: mpyszynski/k8s-gcp:latest
      nodeSelector:
        kubernetes.io/hostname: gke-cluster-1-default-pool-c18ec09f-kc3h
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-v2
  labels:
    app: server
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
      version: v2
  template:
    metadata:
      labels:
        app: server
        version: v2
    spec:
      containers:
      - name: server
        image: mpyszynski/k8s-gcp:latest
      nodeSelector:
        kubernetes.io/hostname: gke-cluster-1-default-pool-c18ec09f-kc3h
