ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
spec:
  rules:
      - host:
      - http:
          paths:
          - path: /get2
            pathType: Prefix
            backend:
              serviceName: "test-server-service"
              servicePort: 8000
          - backend:
              serviceName: "test-service2"
              servicePort: 8000

  #     - http:
  #         paths:
  #         - path: /get2
  #           pathType: Prefix
  #           backend:
  #             serviceName: "test-server-service"
  #             servicePort: 8000
